<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconSize="35dp"
        app:itemIconTint="@drawable/nav_color"
        app:itemTextColor="@drawable/nav_color"
        app:menu="@menu/bottom_nav">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <View
        android:id="@+id/view3"
        android:layout_width="383dp"
        android:layout_height="67dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo_white" />

    <TextView
        android:id="@+id/EcoClan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="26dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app"
        android:textColor="#27DC2E"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/upMenu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_down" />

    <View
        android:id="@+id/view4"
        android:layout_width="380dp"
        android:layout_height="570dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="82dp"
        android:background="@drawable/background"
        android:outlineProvider="none"
        android:overScrollMode="ifContentScrolls" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/receive"
        android:textColor="#053A07"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="150dp"
        android:text="@string/category"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="260dp"
        android:text="@string/weight"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="32dp"
        android:layout_height="30dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/plus"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextTextPersonName1"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="290dp"
        android:ems="13"
        android:inputType="numberDecimal"
        android:text="@string/zero"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="32dp"
        android:layout_height="30dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/minus"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="350dp"
        android:text="@string/payment"
        android:textColor="#000000"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="141dp"
        android:layout_height="50dp"
        android:layout_marginLeft="138dp"
        android:layout_marginTop="380dp"
        android:text="@string/Amount"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="513dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/confirm1"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="178dp"
        android:layout_height="34dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/paymentMethod"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="180dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/cat1"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="200dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/cat2"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="220dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/cat3"
        android:textSize="20sp" />

</RelativeLayout>
