<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconSize="35dp"
        app:itemIconTint="@drawable/nav_color"
        app:itemTextColor="@drawable/nav_color"
        app:menu="@menu/bottom_nav">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <View
        android:id="@+id/view3"
        android:layout_width="383dp"
        android:layout_height="67dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo_white" />

    <TextView
        android:id="@+id/EcoClan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="26dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app"
        android:textColor="#27DC2E"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/upMenu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_down" />

    <View
        android:id="@+id/view4"
        android:layout_width="380dp"
        android:layout_height="570dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="82dp"
        android:background="@drawable/background"
        android:outlineProvider="none"
        android:overScrollMode="ifContentScrolls" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="106dp"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/updateInfo"
        android:textColor="#053A07"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="151dp"
        android:text="@string/name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dummyText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="195dp"
        android:text="@string/postal"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextPersonName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="215dp"
        android:ems="13"
        android:inputType="textPostalAddress"
        android:text="@string/dummyText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="265dp"
        android:text="@string/city"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="255dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dummyText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="310dp"
        android:text="@string/contact"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="330dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/dummyContact"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="380dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="400dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/dummyEmail"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="450dp"
        android:text="@string/password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="460dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/dummyText"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="520dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>

